analytics-service/k8s/namespace-analytics.yml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    application: analytics
