analytics-service/k8s/service-analytics.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics
spec:
  selector:
    app: analytics-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
  type: ClusterIP
