analytics-service/k8s/ingress-analytics.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: analytics
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "togglemaster.local"
      http:
        paths:
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
